<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_login_text"
                android:drawableLeft="@drawable/user_default"
                android:drawablePadding="10dp"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_centerVertical="true"
                />
    </RelativeLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/list_item_title"
            android:text="@string/main_list_item_itile1"
            />
    <ListView
            android:id="@+id/my_mymsic_listview"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/list_item_title"
            android:text="@string/main_list_item_itile2"
            />
    <ListView
            android:id="@+id/my_mylist_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
</LinearLayout>